--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true,
+    "amd": true
   },
+
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -20,28 +23,8 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
-    "indent": ["error", "tab"],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "never"],
     "tailwindcss/classnames-order": "warn",
     "tailwindcss/no-custom-classname": "warn",
-    "tailwindcss/no-contradicting-classname": "error",
-    "env": {
-      "browser": true,
-      "amd": true,
-      "node": true
-    },
-    "prettier/prettier": [
-      "error",
-      {
-        "printWidth": 80,
-        "trailingComma": "es5",
-        "semi": false,
-        "jsxSingleQuote": true,
-        "singleQuote": false,
-        "useTabs": true
-      }
-    ]
+    "tailwindcss/no-contradicting-classname": "error"
   }
 }
