--- a/package.json
+++ b/package.json
@@ -53,10 +53,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.12.1",
     "@tailwindcss/postcss7-compat": "^2.2.14",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "autoprefixer": "^9.8.6",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -64,6 +69,7 @@
     "eslint-plugin-tailwindcss": "^1.14.3",
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^2.2.15",
+    "tsconfig-paths-webpack-plugin": "^3.5.1"
   }
 }
