--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "react-template-cra",
+  "name": "@homfarnam/react-template-cra",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/homfarnam/React-template---CRA.git."
+  },
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
