--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/homfarnam/React-template---CRA.git."
+    "url": "git://github.com/homfarnam/React-template---CRA.git"
   },
   "dependencies": {
     "@craco/craco": "^6.3.0",
