--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@homfarnam/create-react-template-farnam",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "bin": "./bin/cli.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/homfarnam/React-template---CRA.git"
   },
+  "publishConfig": {
+    "@homfarnam:registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
-    "@craco/craco": "^6.3.0",
+    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -23,7 +26,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
