--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@homfarnam/create-react-template-farnam",
-  "version": "0.4.0",
-  "bin": "./bin/cli.js",
+  "name": "@homfarnam/create-react-template",
+  "version": "0.6.0",
+  "bin": {
+    "create-react-template": "bin/cli.js"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/homfarnam/React-template---CRA.git"
+    "url": "git://github.com/homfarnam/React-template---CRA.git"
   },
   "publishConfig": {
     "@homfarnam:registry": "https://npm.pkg.github.com"
@@ -20,6 +22,7 @@
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
     "delay-cli": "^1.1.0",
+    "npm-init-helper": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
