--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "@homfarnam/create-react-template",
   "version": "0.6.0",
-  "bin": {
-    "create-react-template": "bin/cli.js"
-  },
+  "bin": "./bin/cli.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/homfarnam/React-template---CRA.git"
-  },
-  "publishConfig": {
-    "@homfarnam:registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "@craco/craco": "^5.9.0",
