--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@homfarnam/create-react-template",
-  "version": "0.6.0",
+  "version": "0.0.0-development",
   "bin": "./bin/cli.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/homfarnam/React-template---CRA.git"
+    "url": "https://github.com/homfarnam/React-template---CRA.git"
   },
   "dependencies": {
     "@craco/craco": "^5.9.0",
@@ -37,7 +37,8 @@
     "react-scripts:start": "delay 5 && react-scripts start",
     "react-scripts:build": "react-scripts build",
     "eject": "react-scripts eject",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "semantic-release": "semantic-release"
   },
   "eslintConfig": {
     "extends": [
@@ -75,6 +76,7 @@
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.15",
-    "tsconfig-paths-webpack-plugin": "^3.5.1"
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "semantic-release": "^18.0.0"
   }
 }
