--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "eslint-plugin-tailwindcss": "^1.14.3",
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
+    "semantic-release": "^18.0.0",
     "tailwindcss": "^2.2.15",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "semantic-release": "^18.0.0"
+    "tsconfig-paths-webpack-plugin": "^3.5.1"
   }
 }
