--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^1.1.5",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
@@ -38,7 +38,8 @@
     "react-scripts:build": "react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "commit": "git-cz"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +69,8 @@
     "autoprefixer": "^9.8.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -78,5 +81,10 @@
     "semantic-release": "^18.0.0",
     "tailwindcss": "^2.2.15",
     "tsconfig-paths-webpack-plugin": "^3.5.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
