--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,3 +29,18 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
     # - run: npm test
+  
+  publish:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == ‘refs/heads/main’ }}
+    needs: [quality]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run semantic-release
+    
