--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
   
   publish:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == ‘refs/heads/master’ }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: [quality]
     steps:
       - uses: actions/checkout@v2
