--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        os: ["ubuntu-latest", "windows-latest"]
+        os: ubuntu-latest
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,7 +29,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
     # - run: npm test
-  
+
   publish:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
@@ -43,4 +43,3 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run semantic-release
-    
