--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+    branches: 
+      - master
   pull_request:
     branches: "*"
 
@@ -34,7 +35,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     needs: [quality]
     steps: 
     - uses: actions/checkout@v2
