--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "semantic-release-cli": "^5.4.4",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
@@ -41,7 +42,7 @@
     "react-scripts:build": "react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
-    "semantic-release": "semantic-release --branches master",
+    "semantic-release": "semantic-release",
     "commit": "git-cz"
   },
   "eslintConfig": {
