--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
 #       - run: npm run semantic-release
+      - name: NPM Publish
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
