--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+#         node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x, 16.x]
 
         os: ["ubuntu-latest"]
 
@@ -49,7 +50,7 @@ jobs:
       - name: NPM Publish
         uses: JS-DevTools/npm-publish@v1
         with:
-          token: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 #         env:
 #           token: ${{ secrets.NPM_TOKEN }}
 # #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
