--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,8 +31,7 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com
           scopes: "@homfarnam"
-      - run: npm install
-      - run: npm version minor
-      - run: npm publish
+      - run: npm ci
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
