--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,7 @@ jobs:
           registry-url: https://npm.pkg.github.com
           scopes: "@homfarnam"
       - run: npm ci
-      - run: npm version minor
+      - run: npm version patch --no-git-tag-version
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
