--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
           scopes: "@homfarnam"
       - run: npm ci
-      - run: npm version patch --no-git-tag-version
-      - run: npm publish --access public
+#       - run: npm version patch --no-git-tag-version
+      - run: npm publish  
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
