--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,25 +25,36 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm publish --access=public
+      - name: Publish Next
+        run: |
+          if [ "$GIT_REF" = "refs/heads/dev" ] ; then
+            
+            yarn build
+            echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+            npm publish --access public
+          fi
         env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          GIT_REF: ${{ github.ref }}
+          NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+#       - run: npm ci
+#       - run: npm publish --access=public
+#         env:
+#           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm version patch --no-git-tag-version
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#   publish-gpr:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       packages: write
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: 14
+#           registry-url: https://npm.pkg.github.com/
+#       - run: npm ci
+#       - run: npm version patch --no-git-tag-version
+#       - run: npm publish --access public
+#         env:
+#           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
