--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@homfarnam/create-react-template",
-  "version": "0.0.0-development",
+  "name": "@farnam/create-react-template",
+  "version": "0.0.1",
   "bin": "./bin/cli.js",
   "repository": {
     "type": "git",
@@ -10,7 +10,8 @@
     "node": ">=13"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@homfarnam"
+    "registry": "https://registry.npmjs.org/",
+    "tag": "npm"
   },
   "dependencies": {
     "@craco/craco": "^5.9.0",
