--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@farnam/create-react-template",
+  "version": "0.0.0",
   "bin": "./bin/cli.js",
   "repository": {
     "type": "git",
