chore(config): Add new script

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,14 +32,15 @@ jobs:
         run: npm ci
 
       - name: Publish to NPM
+        run: ../../bin/script npm publish -q
 
-        run: |
-          if [ "$GIT_REF" = "refs/heads/master" ] ; then
-            npm version --no-git-tag-version
-            
-            echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-            npm publish -q
-          fi
+        # run: |
+        #   if [ "$GIT_REF" = "refs/heads/master" ] ; then
+        #     npm version --no-git-tag-version
+
+        #     echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+        #     npm publish -q
+        #   fi
         env:
           GIT_REF: ${{ github.ref }}
           NPM_AUTH_TOKEN: ${{secrets.AUTH_NPM}}
