--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss": "^8.3.6",
     "prettier": "^2.4.1",
     "semantic-release": "^18.0.0",
+    "standard-version": "^9.3.1",
     "tailwindcss": "^2.2.15",
     "tsconfig-paths-webpack-plugin": "^3.5.1"
   },
