Add new command

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -35,7 +35,7 @@ jobs:
 
         run: |
           if [ "$GIT_REF" = "refs/heads/master" ] ; then
-            standard-version  
+            npm run release  
 
             echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
             npm publish -q
