--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,13 +32,13 @@ jobs:
         run: npm ci
 
       - name: Publish to NPM
-#  npm run release
+
         run: |
           if [ "$GIT_REF" = "refs/heads/master" ] ; then
              
-
+            npm run build
             echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-            npm publish -q
+            npm publish --access=public
           fi
         env:
           GIT_REF: ${{ github.ref }}
