--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,14 +32,15 @@ jobs:
         run: npm ci
 
       - name: Publish to NPM
+        run: npm publish --access=public
 
-        run: |
-          if [ "$GIT_REF" = "refs/heads/master" ] ; then
+#         run: |
+#           if [ "$GIT_REF" = "refs/heads/master" ] ; then
              
-            npm run build
-            echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-            npm publish --access=public
-          fi
+#             npm run build
+#             echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+#             npm publish --access=public
+#           fi
         env:
           GIT_REF: ${{ github.ref }}
           NPM_AUTH_TOKEN: ${{secrets.AUTH_NPM}}
