--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -47,14 +47,14 @@ jobs:
 
 
       - name: Publish to NPM
-        run: npm publish --access=public
+#         run: npm publish --access=public
 
-#         run: |
-#           if [ "$GIT_REF" = "refs/heads/master" ] ; then
+        run: |
+          if [ "$GIT_REF" = "refs/heads/master" ] ; then
              
-#             npm run build
-#             echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-#             npm publish --access=public
+            npm run build
+            echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+            npm publish --access=public
 #           fi
         env:
           GIT_REF: ${{ github.ref }}
