--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,11 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
-        with:
-          # "ref" specifies the branch to check out.
-          # "github.event.release.target_commitish" is a global variable and specifies the branch the release targeted
-          ref: ${{ github.event.release.target_commitish }}
+        uses: actions/checkout@master
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -34,40 +30,19 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
-        
-        # set up git since we will later push to the repo
-      
-      
-      - run: git config --global user.name "Farnam"
-        
-      - run: git config --global user.email "homfarnam@gmail.com"
-      
-      - run: npm version ${{ github.event.release.tag_name }}
-
-
 
       - name: Publish to NPM
- 
-        run: npm ci
-        
-      - run: npm publish --access public
-      
+        run: |
+          echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+          npm publish --access=public
+
+        # run: |
+        #   if [ "$GIT_REF" = "refs/heads/master" ] ; then
+
+        #     npm run build
+        #     echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
+        #     npm publish --access=public
+        #   fi
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-#         run: |
-#           if [ "$GIT_REF" = "refs/heads/master" ] ; then
-             
-#             npm run build
-#             echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-#             npm publish --access=public
-#           fi
-#         env:
-#           GIT_REF: ${{ github.ref }}
-#           NPM_AUTH_TOKEN: ${{secrets.AUTH_NPM}}
-
-
-#       - name: Push to github
-#         run: git push
-#         env:
-#           # The secret is passed automatically. Nothing to configure.
-#           github-token: ${{ secrets.GITHUB_TOKEN }}
+          GIT_REF: ${{ github.ref }}
+          NPM_AUTH_TOKEN: ${{secrets.AUTH_NPM}}
