--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "format": "prettier --write .",
     "semantic-release": "semantic-release --branches master",
     "commit": "git-cz",
-    "release": "standard-version"
+    "release": "standard-version",
+    "publish-npm": "npm publish --access public --ignore-scripts --@farnam:registry='https://registry.npmjs.org'"
+
   },
   "eslintConfig": {
     "extends": [
