--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Publish to NPM
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" >> ~/.npmrc
-          npm publish --access=public
+          npm run publish-npm
 
         # run: |
         #   if [ "$GIT_REF" = "refs/heads/master" ] ; then
