--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,12 @@ jobs:
 #         if: steps.cache.outputs.cache-hit != 'true'
 #         run: npm ci
 
+      - run: git config --global user.name "Farnam"
+        
+      - run: git config --global user.email "homfarnam@gmail.com"
+
       - name: Publish to NPM
+      
         run: |
           echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
           echo $(cat ~/.npmrc)
